docs/1.2rc1/_sources/api/gammapy.maps.WcsGeom.rst.txt
WcsGeom
=======

.. currentmodule:: gammapy.maps

.. autoclass:: WcsGeom
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~WcsGeom.as_energy_true
      ~WcsGeom.axes
      ~WcsGeom.axes_names
      ~WcsGeom.center_coord
      ~WcsGeom.center_pix
      ~WcsGeom.center_skydir
      ~WcsGeom.data_shape
      ~WcsGeom.data_shape_axes
      ~WcsGeom.data_shape_image
      ~WcsGeom.footprint
      ~WcsGeom.footprint_rectangle_sky_region
      ~WcsGeom.frame
      ~WcsGeom.has_energy_axis
      ~WcsGeom.is_allsky
      ~WcsGeom.is_flat
      ~WcsGeom.is_hpx
      ~WcsGeom.is_image
      ~WcsGeom.is_region
      ~WcsGeom.is_regular
      ~WcsGeom.ndim
      ~WcsGeom.npix
      ~WcsGeom.pixel_area
      ~WcsGeom.pixel_scales
      ~WcsGeom.projection
      ~WcsGeom.shape_axes
      ~WcsGeom.wcs
      ~WcsGeom.width

   .. rubric:: Methods Summary

   .. autosummary::

      ~WcsGeom.bin_volume
      ~WcsGeom.binary_structure
      ~WcsGeom.boundary_mask
      ~WcsGeom.contains
      ~WcsGeom.contains_pix
      ~WcsGeom.coord_to_idx
      ~WcsGeom.coord_to_pix
      ~WcsGeom.copy
      ~WcsGeom.create
      ~WcsGeom.crop
      ~WcsGeom.cutout
      ~WcsGeom.cutout_slices
      ~WcsGeom.data_nbytes
      ~WcsGeom.downsample
      ~WcsGeom.drop
      ~WcsGeom.energy_mask
      ~WcsGeom.from_aligned
      ~WcsGeom.from_hdulist
      ~WcsGeom.from_header
      ~WcsGeom.get_coord
      ~WcsGeom.get_idx
      ~WcsGeom.get_pix
      ~WcsGeom.is_aligned
      ~WcsGeom.is_allclose
      ~WcsGeom.pad
      ~WcsGeom.pix_to_coord
      ~WcsGeom.pix_to_idx
      ~WcsGeom.region_mask
      ~WcsGeom.region_weights
      ~WcsGeom.rename_axes
      ~WcsGeom.replace_axis
      ~WcsGeom.resample_axis
      ~WcsGeom.separation
      ~WcsGeom.slice_by_idx
      ~WcsGeom.solid_angle
      ~WcsGeom.squash
      ~WcsGeom.to_bands_hdu
      ~WcsGeom.to_binsz
      ~WcsGeom.to_cube
      ~WcsGeom.to_even_npix
      ~WcsGeom.to_header
      ~WcsGeom.to_image
      ~WcsGeom.to_odd_npix
      ~WcsGeom.upsample

   .. rubric:: Attributes Documentation

   .. autoattribute:: as_energy_true
   .. autoattribute:: axes
   .. autoattribute:: axes_names
   .. autoattribute:: center_coord
   .. autoattribute:: center_pix
   .. autoattribute:: center_skydir
   .. autoattribute:: data_shape
   .. autoattribute:: data_shape_axes
   .. autoattribute:: data_shape_image
   .. autoattribute:: footprint
   .. autoattribute:: footprint_rectangle_sky_region
   .. autoattribute:: frame
   .. autoattribute:: has_energy_axis
   .. autoattribute:: is_allsky
   .. autoattribute:: is_flat
   .. autoattribute:: is_hpx
   .. autoattribute:: is_image
   .. autoattribute:: is_region
   .. autoattribute:: is_regular
   .. autoattribute:: ndim
   .. autoattribute:: npix
   .. autoattribute:: pixel_area
   .. autoattribute:: pixel_scales
   .. autoattribute:: projection
   .. autoattribute:: shape_axes
   .. autoattribute:: wcs
   .. autoattribute:: width

   .. rubric:: Methods Documentation

   .. automethod:: bin_volume
   .. automethod:: binary_structure
   .. automethod:: boundary_mask
   .. automethod:: contains
   .. automethod:: contains_pix
   .. automethod:: coord_to_idx
   .. automethod:: coord_to_pix
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: cutout
   .. automethod:: cutout_slices
   .. automethod:: data_nbytes
   .. automethod:: downsample
   .. automethod:: drop
   .. automethod:: energy_mask
   .. automethod:: from_aligned
   .. automethod:: from_hdulist
   .. automethod:: from_header
   .. automethod:: get_coord
   .. automethod:: get_idx
   .. automethod:: get_pix
   .. automethod:: is_aligned
   .. automethod:: is_allclose
   .. automethod:: pad
   .. automethod:: pix_to_coord
   .. automethod:: pix_to_idx
   .. automethod:: region_mask
   .. automethod:: region_weights
   .. automethod:: rename_axes
   .. automethod:: replace_axis
   .. automethod:: resample_axis
   .. automethod:: separation
   .. automethod:: slice_by_idx
   .. automethod:: solid_angle
   .. automethod:: squash
   .. automethod:: to_bands_hdu
   .. automethod:: to_binsz
   .. automethod:: to_cube
   .. automethod:: to_even_npix
   .. automethod:: to_header
   .. automethod:: to_image
   .. automethod:: to_odd_npix
   .. automethod:: upsample
